# python-for-ml

./: .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.MD  README.md  pyproject.toml  readme-coockiecutter.md  readme.md
docs/: index.md  installation.md  mkdocs.yml  usage.md
docs/docs/: index.md
docs/docs/archive/: Frontend → ML-Engineer + LLM-Expert.md  README.md  kanban-over-github.md  kanban-self-hosted-gitlab.md  llm-full-roadmap.md
docs/lm-advanced/: W1.md  W10.md  W11.md  W12.md  W13.md  W14.md  W15.md  W16.md  W17.md  W18.md  W19.md  W2.md  W20.md  W21.md  W22.md  W23.md  W24.md  W3.md  W4.md  W5.md  W6.md  W7.md  W8.md  W9.md  index.md
docs/lm-stage/: Q1 .md  Q2.md  Q3.md  Q4.md  Q5.md  Q6.md  route.md
docs/python-advanced/: Q1-3.md
docs/python-core/: P-Q1.md  P-Q2.md
first-python-for-lm-engeneer/: Makefile  README.md  pyproject.toml
first-python-for-lm-engeneer/docs/: mkdocs.yml
first-python-for-lm-engeneer/docs/docs/: index.md
first-python-for-lm-engeneer/first_python_for_lm_engeneer/: __init__.py  dataset.py  features.py  plots.py
first-python-for-lm-engeneer/first_python_for_lm_engeneer/modeling/: predict.py  train.py
first-python-for-lm-engeneer/tests/: test_data.py
python-starter/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
python-starter/.github/: ISSUE_TEMPLATE.md
python-starter/docs/: index.md  installation.md  usage.md
python-starter/src/python_starter/: __init__.py  cli.py
python-starter/tests/: __init__.py  test_python_starter.py
python_for_ml/: __init__.py  dataset.py  features.py  plots.py
python_for_ml/modeling/: predict.py  train.py
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
src/python_boilerplate/: __init__.py  cli.py
tests/: test_python_boilerplate.py
