[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "python_for_ml"
version = "0.0.1"
description = "A project for preparing the skills of working with a Pyighton, followed by mastering the specialty of a ml-engineer"
authors = [
  { name = "wascoyur" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["python_for_ml"]
include = ["pyproject.toml", "python_for_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["python_for_ml"]
force-sort-within-sections = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

