[project]
name = "ml-engeneer-start"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "wascoyur", email = "wascoyur@yandex.ru"}
]
maintainers = [
  {name = "", email = "wascoyur@yandex.ru"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer",
  "pytest (>=8.4.1,<9.0.0)"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[project.urls]
bugs = "https://github.com/wascoyur/python-for-ml/issues"
changelog = "https://github.com/wascoyur/python-for-ml/blob/master/changelog.md"
homepage = "https://github.com/wascoyur/python-for-ml"

[project.scripts]
python_boilerplate = "src.cli:app"

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
